--- a/packages/shared/src/utils/constants/locales/en/common.json
+++ b/packages/shared/src/utils/constants/locales/en/common.json
@@ -7,5 +7,6 @@
   "download": "Download",
   "contact": "Contact",
   "login": "Log In",
-  "i18nTest": "Junseo, I set up i18n.  "
+  "i18nTest": "{{name.en}}, I set up i18n.  ",
+  "i18nTest2": "{{name}}, I set up i18n.  "
 }
