--- a/packages/shared/src/utils/constants/locales/ko/common.json
+++ b/packages/shared/src/utils/constants/locales/ko/common.json
@@ -7,5 +7,6 @@
   "download": "다운로드",
   "contact": "협업문의",
   "login": "로그인",
-  "i18nTest": "준서야 i18n 해놨어"
+  "i18nTest": "{{name.ko}} i18n 해놨어",
+  "i18nTest2": "{{name}},  i18n 해놨어  "
 }
